# geodukt

./: Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
crates/geodukt-core/: Cargo.toml
crates/geodukt-io/: Cargo.toml
crates/geodukt-io/src/: geopackage_io.rs  shapefile_io.rs
crates/geodukt-plugins/: Cargo.toml
crates/geodukt-server/: Cargo.toml  build.rs
crates/geodukt-server/src/: gp_tools.rs  lib.rs
crates/geodukt-transforms/: Cargo.toml
crates/geodukt-transforms/src/: expression.rs  simplify.rs
