[package]
name = "geodukt-io"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
geodukt-core = { path = "../geodukt-core" }
geo = "0.33"
geojson = "1.0"
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
flatgeobuf = "6"
geoparquet = { package = "parquet", version = "54", optional = true }
shapefile = "0.6"
rusqlite = { version = "0.32", features = ["bundled"] }
object_store = { version = "0.13", features = ["aws", "gcp", "azure"] }
tokio = { version = "1", features = ["rt"] }
bytes = "1"
futures = "0.3"

[features]
default = []
parquet = ["geoparquet"]
cloud = []

[dev-dependencies]
tempfile = "3"
