[package]
name = "geodukt-transforms"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
geodukt-core = { path = "../geodukt-core" }
geo = "0.29"
proj = { version = "0.28", optional = true }
toml = "1.1"
thiserror = "2"
rayon = "1"

[features]
default = ["reproject"]
reproject = ["proj"]
